# Parallel-and-Distributed-Programming

./: README.md
GraphColoring/: Backup.txt  GraphColoring.sln
GraphColoring/GraphColoring/: GraphColoring.vcxproj  GraphColoring.vcxproj.filters  graph.cpp  graph.h  graph_coloring.cpp  graph_coloring.h  main.cpp
GraphColoring/GraphColoring/docs/html/: annotated.html  class_graph-members.html  class_graph.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  (+8 more)
lab1/: Cargo.toml  accounts_data.txt
lab1/src/: account.rs  main.rs
lab2/: lab2.sln
lab2/lab2/: lab2.vcxproj  main.cpp  main2.cpp
lab3/: lab3.sln
lab3/lab3/: lab3.vcxproj  main.cpp
lab4/: lab4.sln
lab4/lab4/: AsyncSolution.cs  CallbacksSolution.cs  HttpHelper.cs  Program.cs  State.cs  TasksSolution.cs
lab5/: lab5.sln
lab5/lab5/: Multiplications.cpp  Multiplications.h  Polynomial.cpp  Polynomial.h  lab5.vcxproj  lab5.vcxproj.filters  main.cpp
lab6/: lab6.sln
lab6/lab6/: lab6.vcxproj  lab6.vcxproj.filters  main.cpp  stats.txt
lab6_clion/: CMakeLists.txt  DirectedGraph.cpp  DirectedGraph.h  main.cpp  stats.txt
lab7/: lab7.sln
lab7/lab7/: Multiplications.cpp  Multiplications.h  Polynomial.cpp  Polynomial.h  exceptions.txt  globals.cpp  globals.h  lab7.vcxproj  lab7.vcxproj.filters  main.cpp
lab8/: lab8.sln
lab8/lab8/: distributed_shared_memory.cpp  distributed_shared_memory.h  globals.cpp  globals.h  lab8.vcxproj  lab8.vcxproj.filters  main.cpp  mpi_utils.cpp  mpi_utils.h  variable.cpp  variable.h
(+89 files in other folders)
